# substrate-tode

./: README.md
substrate-front-end-template/: package.json
substrate-front-end-template/src/: AccountSelector.js  App.js  Course.js  CourseAvatar.js  CourseCards.js  Courses.js  Interactor.js  Kitties.js  Quiz.js  index.js  quiz.css
substrate-front-end-template/src/config/: common.json  development.json  production.json
substrate-node-template/node/src/: chain_spec.rs
substrate-node-template/pallets/kitties/: Cargo.toml
substrate-node-template/pallets/kitties/src/: mock.rs  tests.rs
substrate-node-template/pallets/tode/: Cargo.toml
substrate-node-template/pallets/tode/src/: lib.rs
substrate-node-template/runtime/: Cargo.toml  types.json
substrate-node-template/runtime/src/: lib.rs
